# tracel

crates/heat-sdk-cli/: Cargo.toml
crates/heat-sdk-cli-macros/src/: lib.rs
crates/heat-sdk-cli/src/: cli.rs  registry.rs
crates/heat-sdk-cli/src/cli_commands/package/: mod.rs
crates/heat-sdk-cli/src/cli_commands/run/: training.rs
crates/heat-sdk-cli/src/crate_gen/: crate_gen.rs
crates/heat-sdk/src/: lib.rs
examples/crateA/: Cargo.toml
examples/guide/: Cargo.toml
examples/guide-cli/: Cargo.toml  README.md
examples/guide-cli/src/: inference.rs  lib.rs  training.rs
examples/guide/src/: lib.rs  training.rs
