[package]
edition.workspace = true
name = "guide-cli"
publish = false
version.workspace = true

[dependencies]
burn = { workspace = true, features = ["vision", "train"] }
tracel = { path = "../../crates/tracel", features = ["heat-sdk"] }
guide = { path = "../guide" }
crateA = { path = "../crateA" }

[dev-dependencies]
tracel = { path = "../../crates/tracel", features = ["cli"] }

[profile.dev]
opt-level = 0
strip = "debuginfo"
